--- a/thesis/alias/system.tex
+++ b/thesis/alias/system.tex
@@ -105,7 +105,7 @@ This parameterization adds a little bit of flow sensitivity even in otherwise in
 
 We then aggregate all update summaries from the program and solve them by equality via Steensgaard's algorithm.
 Steensgaard runs  in almost linear time~\cite{steensgaard-alias} making it possible to compute over nearly any binary, though is less precise than flow-sensitive analysis, described below.
-In this paper, we use insensitive analysis as a baseline to help quantify the additional precision derived by adding additional sensitivity.
+We use insensitive analysis as a baseline to help quantify the additional precision derived by adding additional sensitivity.
 
 
 
