--- a/thesis/tachyon/apps.tex
+++ b/thesis/tachyon/apps.tex
@@ -4,7 +4,7 @@ There are a wide variety of purposes this technology could be used for. We
 have primarily targeted patch verification, but it can also be used for
 debugging, crash reporting, and running honeypots.
 \subsubsection{Live Patch Testing}
-This is the main application we have been describing throughout the paper.
+This is the main application we have been describing throughout the chapter.
 Here, there are have two main possibilities - either the primary
 objective is in making sure all services operate as they have,
 or the primary goal more is more concerned with keeping those services secure.
