--- a/thesis/tachyon/discussion.tex
+++ b/thesis/tachyon/discussion.tex
@@ -1,7 +1,7 @@
 \section{Discussion}
 \label{tach:sec:discussion}
 
-\paragraph{Other Patch Testing Scenarios.} While throughout this paper we have focused on online patch testing
+\paragraph{Other Patch Testing Scenarios.} While throughout this chapter we have focused on online patch testing
 where the patched version is run live, we could also run the unpatched
 version live.  We note that the live program can continue executing
 after a deviation, but currently the syscall sync application cannot.
