--- a/thesis/tachyon/related.tex
+++ b/thesis/tachyon/related.tex
@@ -89,8 +89,7 @@ automatically generated inputs as well.  For example, we could use
 test cases produced by automated systems such as
 KLEE~\cite{cadar:2008}, BitBlaze~\cite{bitblaze}, and BAP~\cite{bap}.
 
-Brumley \etal have previously proposed deviation detection at the
-binary level~\cite{brumley:2007:deviations}.  The main goal in this
+Brumley \etal have previously proposed deviation detection on binaries~\cite{brumley:2007:deviations}.  The main goal in this
 work is to automatically \emph{generate} likely deviations, which is a
 different problem than tandem execution.  Once a candidate deviation
 is generated, the deviation was manually validated (Section
