--- a/thesis/tachyon/tachyon.tex
+++ b/thesis/tachyon/tachyon.tex
@@ -1,4 +1,4 @@
-\newcommand{\tachyon}{\textsc{Tachyon}}
+\newcommand{\tachyon}{\textsc{Tachyon}\xspace}
 \chapter{\tachyon: Tandem Execution for Efficient Live Patch Testing}
 \newcommand{\allsystemcallreplay}{patil:2010,guo:2008}
 \newcommand{\allinstructionlevelreplay}{patil:2010,gdb,undodb}
@@ -20,4 +20,3 @@
 \input{tachyon/results}
 \input{tachyon/discussion}
 \input{tachyon/related}
-\input{tachyon/conclusion}
