--- a/thesis/tachyon/types.tex
+++ b/thesis/tachyon/types.tex
@@ -76,7 +76,9 @@ that allows us to express \emph{relationships} between parameter values.
 
 
 \begin{figure}
-\includegraphics[scale=0.3]{tachyon/LookupDiagram.pdf}
+	\begin{center}
+\includegraphics[scale=0.4]{tachyon/LookupDiagram.pdf}
+	\end{center}
 \caption{A lookup in action}
 \label{tach:fig:lookup}
 \end{figure}
