--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -13,6 +13,7 @@
 \usepackage{subfigure}
 \usepackage{proof}
 \usepackage{enumitem}
+\usepackage{xspace}
 \usepackage[numbers,sort]{natbib}
 \usepackage[letterpaper,twoside]{geometry}
 \usepackage{changepage}
