--- a/thesis/bitr/eval.tex
+++ b/thesis/bitr/eval.tex
@@ -24,27 +24,45 @@ Unfortunately, we can only compare ourselves to TIE with this metric, as we do n
 
 %  List of questions, each corresponding to a subsection
 \subsection{Can \bitr\ recover types in sample cases?}
-In small example programs which sum lists, walk binary trees, and perform simple look-ups in arrays of structs, we achieved 100\% success. They provide a stark comparison to TIE, which produced 11\% on summation of lists (corresponding to all things of a given size being valid), correctly identified the temporary variables in the tree walking for 15\%, and could not determine that the global array we were playing with the structs in existed, getting another 12\% on temporary variables. We mention these programs to highlight that \bitr\ handles behavior that was previously not even measured in the literature. Hex-Rays'~\cite{ida} performance on the loop summation example, as seen in the introduction, would have scored a 14\% with that output. Note that the comparison here is somewhat unfair, because IDA must express exactly one type to the user. As a result, Hex-Rays' other numbers are not reported as the comparison is not meaningful or fair.
+In small example programs which sum lists, walk binary trees, and perform simple look-ups in arrays of structs, we achieved 100\% success. They provide a stark comparison to TIE, which produced 11\% on summation of lists (corresponding to all things of a given size being valid), correctly identified the temporary variables in the tree walking for 15\%, and could not determine that the global array containing the structs in existed, getting another 12\% on temporary variables. We mention these programs to highlight that \bitr\ handles behavior that was previously not even measured in the literature. Hex-Rays'~\cite{ida} performance on the loop summation example, as seen in the introduction, would have scored a 14\% with that output. Note that the comparison here is somewhat unfair, because IDA must express exactly one type to the user. As a result, Hex-Rays' other numbers are not reported as the comparison is not meaningful or fair.
 
 \subsection{Does \bitr's recovery ability exceed previous work?}
 \label{subsec:evalprev}
 \begin{figure*}
 \centering{
-\begin{tabular}{|c||c|c|c|c|c|}
+\begin{tabular}{|c||c|c|c|}
 \hline
-Implementation & Unconstrained & Constrained & Conservativity & Unconstrained Dist. & Constrained Dist.\\
+Implementation & Unconstrained & Constrained & Conservativity \\
 \hline
-\bitr & $21.02\% \pm 2.64$ & $38.00\% \pm 5.81$ & $91.72\% \pm 3.35$ & $1.32 \pm 0.06$ & $0.65 \pm 0.075$\\
-TIE & $12.64\% \pm 7.06$ & $16.80\% \pm 1.63$ & $90.31\% \pm 2.66$ & $2.10 \pm 0.044$ & $1.58 \pm 0.25$\\
+\bitr & $21.02\% \pm 2.64$ & $38.00\% \pm 5.81$ & $91.72\% \pm 3.35$\\
+TIE & $12.64\% \pm 7.06$ & $16.80\% \pm 1.63$ & $90.31\% \pm 2.66$\\
 \hline
 \hline
-Improvement & 8.38\% & 21.2\% & 1.41\% & 0.78 & 0.93 \\
+Improvement & 8.38\% & 21.2\% & 1.41\%\\
 \hline
 \end{tabular}
 }
-\caption{Result Summary}
-\label{fig:results}
+\caption{Result Summary (Probability Metric)}
+\label{bitr:fig:results-prob}
 \end{figure*}
+\begin{figure*}
+\centering{
+\begin{tabular}{|c||c|c|}
+\hline
+	Implementation & Unconstrained Dist. & Constrained Dist.\\
+\hline
+\bitr & $1.32 \pm 0.06$ & $0.65 \pm 0.075$\\
+TIE & $2.10 \pm 0.044$ & $1.58 \pm 0.25$\\
+\hline
+\hline
+Improvement & 0.78 & 0.93 \\
+\hline
+\end{tabular}
+}
+\caption{Result Summary (TIE Distance Metric)}
+\label{bitr:fig:results-tie}
+\end{figure*}
+
 For a more real-world evaluation, we ran our system and TIE~\cite{tie} with our new metric, over \texttt{coreutils}, a collection of common programs installed on nearly every UNIX system. The programs in \texttt{coreutils} represent a variety of different kinds of workloads, and are open source, so we were readily able to build and examine debug symbols for them. We use this data set to answer this and our remaining questions.
 
 In an effort to demonstrate the validity of our new metric and compare ourselves to systems other than TIE (on which we were able to generate our new metric scoring due to TIE access), we also report statistics of conservatism and distance in the same way as previous work~\cite{tie,sw}. Overall, on \texttt{coreutils} we achieve conservatism of 95.95\% and an average distance of only 1.33. If we only examine type variables which had at least one constraint reference them, we see instead an average distance of 0.68, substantially better than previous work.
@@ -64,11 +82,13 @@ int f(void* x) {
 \end{verbatim}
 we would get code which would be legal if our mystery type were either an \texttt{int} or a pointer of some variety. We can use heuristics when outputting a type for decompilation (for example, preferring the lower bound of a type in order to avoid casting), but since both are legal, and all constraints on \texttt{v} are visible in this snippet, we would never be able to get an exact type.
 
-Dealing with these would be a matter of better heuristics, and would have left the realm of program analysis and gone into the realm of programmer analysis. The heuristic of selecting the lower bound is not a good one, as this will reduce your conservativeness, but sometimes this choice may make sense. Developing heuristics to deal with this issue is outside the scope of the paper, but presents an interesting challenge discovered in our experiments.
+Dealing with these would be a matter of better heuristics, and would have left the realm of program analysis and gone into the realm of programmer analysis. The heuristic of selecting the lower bound is not a good one, as this will reduce your conservativeness, but sometimes this choice may make sense. Developing heuristics to deal with this issue is outside the scope of this work, but presents an interesting challenge discovered in our experiments.
 
 \subsection{How does \bitr\ fare at recovering constrained types?}
 \begin{figure}
-\includegraphics[scale=0.60]{bitr/quality.pdf}
+	\begin{center}
+\includegraphics[scale=1.1]{bitr/quality.pdf}
+	\end{center}
 \caption{Effects of Unconstrained Type Variables}
 \label{fig:unconst}
 \end{figure}
@@ -77,7 +97,7 @@ In order to more closely examine the effect that unconstrained type variables ha
 difference between responses that \bitr\ has constraints on, and those it does not.
 When we restrict ourselves to type variables which the code accessed, causing a constraint to be generated, our recovery rate spikes to 36.78\%, showing great overall improvement.
 
-This makes sense as a measurement because it demonstrates the ability of the tool to police the boundaries of its own knowledge. Specifically, it measures the performance of the tool when used as an advisor rather than as the sole source of types. When \bitr\ has seen the type variable in question constrained, it has a much greater level of constraint available on what the type could be.
+This makes sense as a measurement because it demonstrates the ability of the tool to police the boundaries of its own knowledge. Specifically, it measures the performance of the tool when used as an advisor rather than as the sole source of types. When \bitr\ has seen the type variable in question constrained, it has a much greater level of information available on what the type could be.
 
 \noindent {\bf Unconstrained Type Variables.}
 The primary source of error reflected in this difference is data that is never written to or read from. For example, while most \texttt{coreutils} binaries contain a \texttt{close\_stream} function which operates on a stream structure, there is no indication of the inner properties of this structure in the code itself. However, the debug symbols are constructed in the presence of header files that describe the fields of the stream structure. As a result, the score is strongly deflated.
