--- a/thesis/alias/alias.tex
+++ b/thesis/alias/alias.tex
@@ -1,6 +1,6 @@
 \input{alias/defs}
 \chapter{Alias Analysis}
-\label{sec:alias}
+\label{chap:alias}
 \input{alias/intro}
 \section{Analysis Design}
 \input{alias/system}
