--- a/thesis/bitr/BiTR-0.tex
+++ b/thesis/bitr/BiTR-0.tex
@@ -2,7 +2,7 @@
 \newcommand{\bitr}{{\sc BiTR}}
 
 \chapter{Binary Type Recovery (\bitr)}
-
+\label{chap:bitr}
 \input{bitr/intro}
 \input{bitr/typesys}
 \input{bitr/infer}
