--- a/thesis/holmes/holmes.tex
+++ b/thesis/holmes/holmes.tex
@@ -1,4 +1,5 @@
 \chapter{Holmes}
+\label{chap:holmes}
 % We've argued why datalog, now argue why we want these extra features
 Holmes is a dialect of datalog, tailored with extensions for the specific use case of analyzing compiled code.
 Specifically, a normal dialect of datalog will fall short on several tools desired by the analysis author:
@@ -149,4 +150,3 @@ The user need only specify their rules as usual, circumscribing over things whic
 
 \input{holmes/informal}
 \input{holmes/impl}
-\section{Benchmarks}
