--- a/thesis/holmes/impl.tex
+++ b/thesis/holmes/impl.tex
@@ -1,4 +1,5 @@
 \section{Implementation}
+\label{holmes:sec:impl}
 In order to evaluate the language as a means towards program analysis, we need a running implementation.
 \subsection{Holmes (Old Implementation)}
 Initially, I produced a database backed implementation which compiled down to a combination of Rust and SQL (initially C++ and SQL) and had Postgres handle the business of joins, deduplication, and data storage.
