--- a/thesis/tachyon/tachyon.tex
+++ b/thesis/tachyon/tachyon.tex
@@ -1,5 +1,6 @@
 \newcommand{\tachyon}{\textsc{Tachyon}\xspace}
 \chapter{\tachyon: Tandem Execution for Efficient Live Patch Testing}
+\label{chap:tachyon}
 \newcommand{\allsystemcallreplay}{patil:2010,guo:2008}
 \newcommand{\allinstructionlevelreplay}{patil:2010,gdb,undodb}
 \newcommand{\allvmreplay}{retrace,simics,vmware-replay}
