--- a/thesis/alias/eval.tex
+++ b/thesis/alias/eval.tex
@@ -1,3 +1,4 @@
+\label{alias:sec:eval}
 Our evaluation has 3 major components.
 \begin{itemize}
 \item Juliet - How do we perform on a labeled (true positives, false positives, false negatives) data set?
